# igsf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fft.cpp  fft.h  myMatrix.h  precoimgPixel.cpp  precoimgPixel.h  reconstructBeamspot.cpp
data/: pixelData.txt  pixelData_old.txt  proton.txt
